--- a/CSS/_TenDrum.scss
+++ b/CSS/_TenDrum.scss
@@ -1,4 +1,15 @@
 
 @mixin container() {
-    width: 960px;
+    // margin: auto;
+    width: 1280px;
+
+    @media (max-width: 1280px) {
+        width: 1140px;
+    }
+    @media (max-width: 1140px) {
+        width: 960px;
+    }
+    @media (max-width: 960px) {
+        width: 100%;
+    }
 }
