關於部分切板至沿革(含手機板)速度有調整

--- a/CSS/_TenDrum.scss
+++ b/CSS/_TenDrum.scss
@@ -1,6 +1,6 @@
 
-@mixin container() {
-    // margin: auto;
+@mixin contain() {
+    margin: auto;
     width: 1280px;
 
     @media (max-width: 1280px) {
